# pyfhiaims

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/fhiaims/: dsl.py  errors.py  inputs.py  outputs.py  pluggable.py
tests/: test_pyfhiaims.py
tests/data/: aims.out  control.in  geometry.in
