[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyfhiaims"
version = "0.1.0"
description = ""
authors = [
    "Jan Hermann <dev@jan.hermann.name>",
]

[tool.poetry.dependencies]
python = "^3.7"
textx = "~1.5"
pytest = { version = "^4.4", optional = true }
coverage = { version = "^4.5", optional = true }
pytest-datadir = { version = "^1.3.1", optional = true }

[tool.poetry.extras]
test = ["pytest", "pytest-datadir", "coverage"]

[tool.poetry.dev-dependencies]
flake8 = "^3.5"
flake8-bugbear = ">=18.8"
flake8-comprehensions = ">=1.4"
flake8-quotes = "^2"
black = ">=19-beta.0"
pep8-naming = ">=0.7"
isort = "^4.3"
pydocstyle = "^5.0.1"

[tool.black]
target-version = ["py37"]
